--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<dashboard>
-  
-</dashboard>
+<div class="app-container">
+    <dashboard class="dashboard"></dashboard>
+    <menu class="menu"></menu>
+</div>
+
