--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,9 +1,9 @@
 .dashboard-container{
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
     display: grid;
     gap: 2rem;
+    margin-left: 12rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
