--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,14 +1,14 @@
-.menu{
-    width: 12rem;
-    height: 100%;
-    background-color: blue;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+:host{
     box-sizing:border-box;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    position: fixed;
+    top: 0;
+    margin: 0;
+    width: 12rem;
+    height: 100vh;
+    padding: 3rem 2rem;
+    background-color: blue;
 }
 
-h2{
+.logo{
     color: white;
 }
