--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,9 +1,6 @@
 .dashboard-container{
-    padding-top: 3rem;
-    padding-bottom: 3rem;
     display: grid;
     gap: 2rem;
+    padding: 3rem 2rem;
     margin-left: 12rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
 }
