Implement logic that only shows the menu on medium sized screens or larger

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
-    <dashboard class="dashboard"></dashboard>
-    <menu class="menu"></menu>
+    <dashboard></dashboard>
+    <menu *ngIf="global.showMenu" class="menu"></menu>
 </div>
 
