--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-container">
+<div class="dashboard-container" [class.space-for-menu]="global.showMenu">
     <keywords-container></keywords-container>
     <metrics-container></metrics-container>
     <graphs-container></graphs-container>
