Make menu stick to the left

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -2,9 +2,11 @@
     display: grid;
     gap: 2rem;
     padding: 3rem 2rem;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-
 .space-for-menu{
-    margin-left: 12rem;
+    padding-left: 14rem;
 }
