Chage showMenu to bigMode in globalService

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
     <dashboard></dashboard>
-    <menu *ngIf="global.showMenu" class="menu"></menu>
+    <menu *ngIf="global.bigMode" class="menu"></menu>
 </div>
 
