Make metrics responsive

--- a/src/app/components/metrics-container/metrics-container.component.html
+++ b/src/app/components/metrics-container/metrics-container.component.html
@@ -1,5 +1,5 @@
 <h2>Metrics</h2>
-<div class="metrics-cards-container">
+<div [class.metrics-cards-container--large]="global.bigMode" class="metrics-cards-container">
     <metric-card></metric-card>
     <metric-card></metric-card>
     <metric-card></metric-card>
