Make graphs container responsive

--- a/src/app/components/graphs-container/graphs-container.component.html
+++ b/src/app/components/graphs-container/graphs-container.component.html
@@ -1,4 +1,4 @@
-<div class="graphs-container">
+<div class="graphs-container" [class.graphs-container__large]="global.bigMode">
     <div>
         <h2>Line Chart</h2>
         <line-chart-card></line-chart-card>
