--- a/src/app/components/graphs-container/graphs-container.component.scss
+++ b/src/app/components/graphs-container/graphs-container.component.scss
@@ -1,5 +1,7 @@
 .graphs-container{
     display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 2rem;
+    &__large{
+        grid-template-columns: 1fr 1fr;
+    }
 }
