--- a/src/app/components/keywords-container/keywords-container.component.html
+++ b/src/app/components/keywords-container/keywords-container.component.html
@@ -1,2 +1,3 @@
 <h2>Keywords</h2>
-<keywords-card></keywords-card>
+<p class="body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus sagittis ornare aenean nec in eget. Diam in ultrices vitae magna odio. Consequat, quis purus mi in. Fusce maecenas neque, et sit feugiat laoreet.</p>
+<keywords-input></keywords-input>
