--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-container" [class.space-for-menu]="global.bigMode">
+<div class="dashboard-container">
 
     <div class="keywords-c">
         <h2 class="keywords-c__header">Keywords</h2>
