Create store service

--- a/src/app/components/keywords-input/keywords-input.component.html
+++ b/src/app/components/keywords-input/keywords-input.component.html
@@ -1,10 +1,10 @@
 <mat-form-field class="keywords-form" appearance="outline">
     <mat-label>Select Keywords</mat-label>
     <mat-chip-list #keywordList aria-label="Fruit selection">
-      <mat-chip *ngFor="let keyword of keywords let i = index" 
+      <mat-chip *ngFor="let keyword of store.keywords let i = index" 
         [attr.data-index]="i" 
         [removable]="true"
-        (removed)="removeKeyword(i)"
+        (removed)="store.removeKeyword(i)"
       >
         {{keyword}}
         <button matChipRemove>
