--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="dashboard-container">
 
-    <div class="keywords-c">
-        <h2 class="keywords-c__header">Keywords</h2>
+    <div>
+        <section-header value="Keywords"></section-header>
         <p class="keywords-c__body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lectus sagittis ornare aenean nec in eget. Diam in ultrices vitae magna odio. Consequat, quis purus mi in. Fusce maecenas neque, et sit feugiat laoreet.</p>
         <keywords-input></keywords-input>
     </div>
 
 
     <div>
-        <h2>Metrics</h2>
+        <section-header value="Metrics"></section-header>
         <div class="metrics-c"
          [class.metrics-c--large]="global.bigMode" >
             <metric-card></metric-card>
@@ -20,18 +20,18 @@
 
     <div class="graphs-c" [class.graphs-c--large]="global.bigMode">
         <div>
-            <h2>Line Chart</h2>
+            <section-header value="Line Chart"></section-header>
             <line-chart-card></line-chart-card>
         </div>
     
         <div>
-            <h2>Bar Chart</h2>
+            <section-header value="Bar Chart"></section-header>
             <bar-chart-card></bar-chart-card>
         </div>
     </div>
 
     <div>
-        <h2>Tweets</h2>
+        <section-header value="Tweets"></section-header>
         <div class="tweet-c">
             <tweet-card></tweet-card>
             <tweet-card></tweet-card>
