Connect website to twitter api

--- a/src/app/components/keywords-input/keywords-input.component.html
+++ b/src/app/components/keywords-input/keywords-input.component.html
@@ -6,7 +6,7 @@
         [removable]="true"
         (removed)="store.removeKeyword(i)"
       >
-        {{keyword}}
+        {{keyword.value}}
         <button matChipRemove>
             <mat-icon>cancel</mat-icon>
         </button>
