Implement logic total tweets

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -11,9 +11,9 @@
         <section-header value="Metrics"></section-header>
         <div class="metrics-c"
          [class.metrics-c--large]="global.bigMode" >
-            <metric-card></metric-card>
-            <metric-card></metric-card>
-            <metric-card></metric-card>
+            <metric-total-tweets-card></metric-total-tweets-card>
+            <metric-total-tweets-card></metric-total-tweets-card>
+            <metric-total-tweets-card></metric-total-tweets-card>
         </div>
     </div>
    
