Implement tweet card logic

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -33,11 +33,9 @@
     <div>
         <section-header value="Tweets"></section-header>
         <div class="tweet-c">
-            <tweet-card></tweet-card>
-            <tweet-card></tweet-card>
-            <tweet-card></tweet-card>
-            <tweet-card></tweet-card>
-            <tweet-card></tweet-card>
+            <tweet-card *ngFor="let tweet of store.tweets"
+            [tweet]="tweet"
+            ></tweet-card>
         </div>
     </div>
 </div>
