--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,49 @@
+.dashboard-container{
+  display: grid;
+  gap: 2rem;
+  padding: 3rem 2rem;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-  
- 
-  .drawer {
-    padding: 20px;
-    position: fixed;
+.graphs-c{
+  display: grid;
+  gap: 2rem;
+  &--large{
+      grid-template-columns: 1fr 1fr;
   }
+}
+
+.metrics-c{
+  display: grid;
+  gap: 2rem;
+
+  &--large{
+      grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.keywords-c{
+  display: grid;
+  gap: 1rem;
+
+  &__header{
+      margin: 0;
+  }
+
+  &__body{
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 22px;
+      max-width: 60ch;
+      color: #999999;
+  }
+}
+
+.tweet-c{
+  display: grid;
+  gap: 2rem;
+}
