--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,4 @@
 <div class="max-w-5xl mx-auto px-12 pt-12 overflow-hidden">
   <landing-section></landing-section>
-
-
-  <div>
-    <h2 class="text-primary2 mb-3 text-3xl">Keywords</h2>
-    <p class="max-w-prose text-baseTextColor">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates ut
-      amet, magni nihil totam beatae autem asperiores.</p>
-    <keywords-input></keywords-input>
-  </div>
-
-  <div *ngIf="store.tweet_count != undefined">
-
-    <div class="mt-16">
-      <h2 class="text-primary2 mb-3 text-3xl">Metrics</h2>
-      <div class="flex justify-between">
-        <div class="bg-primary1 rounded-md p-4 w-60 h-40">
-          <p class="text-white text-lg">Total Tweets</p>
-        </div>
-        <div class="bg-primary1 rounded-md p-4 w-60 h-40">
-          <p class="text-white text-lg">Sentiment</p>
-        </div>
-        <div class="bg-primary1 rounded-md p-4 w-60 h-40">
-          <p class="text-white text-lg">Hashtags</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  <keyword-section></keyword-section>
 </div>
