Create metrics section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="max-w-5xl mx-auto px-12 pt-12 overflow-hidden">
   <landing-section></landing-section>
   <keyword-section></keyword-section>
+  <metrics-section></metrics-section>
 </div>
