--- a/src/app/components/keywords-input/keywords-input.component.scss
+++ b/src/app/components/keywords-input/keywords-input.component.scss
@@ -1,3 +1,67 @@
 .keywords-form{
     width: 100%;
 }
+
+.mat-form-field-appearance-outline{
+    opacity: 1;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: white;
+    border-radius: 5px;
+}
+
+.mat-chip.mat-standard-chip::after{
+    background: rgba(0, 0, 0, 0.2);
+}
+
+@layer components {
+    .group1-chip{
+       @apply bg-purple-300 text-white
+    }
+
+    .group2-chip{
+        @apply bg-primary1 text-white
+    }
+    
+    .group3-chip{
+        @apply bg-purple-800 text-white
+    }
+
+    ::ng-deep .mat-step-header .mat-step-icon-selected, .mat-step-header .mat-step-icon-state-done, .mat-step-header .mat-step-icon-state-edit {
+        @apply bg-primary1
+    }
+    
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+        @apply text-primary1
+    }
+    
+    ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+        @apply text-primary1
+    }
+    
+    ::ng-deep .mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick{
+        @apply text-primary1;
+        opacity: 0.8!important;
+    }
+    
+    ::ng-deep .mat-input-element {
+        @apply text-primary1;
+    }
+    
+    ::ng-deep .mat-form-field-invalid .mat-input-element, .mat-warn .mat-input-element {
+        caret-color: #7F39FB!important;
+    }
+    
+    ::ng-deep .mat-form-field-label {
+        color: rgba(0,0,0,.6)!important;
+    }
+    
+    ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
+        @apply text-primary1;
+    }
+    
+    ::ng-deep .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+        @apply text-primary1;
+    }
+}
