Create tweets section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <landing-section></landing-section>
   <keyword-section></keyword-section>
   <metrics-section></metrics-section>
+  <tweets-section></tweets-section>
 </div>
