--- a/src/app/components/tweets-section/tweets-section.component.html
+++ b/src/app/components/tweets-section/tweets-section.component.html
@@ -3,8 +3,7 @@
 </h2>
 
 <div class="flex gap-4 flex-col mb-16">
-    <tweet-card></tweet-card>
-    <tweet-card></tweet-card>
-    <tweet-card></tweet-card>
-    <tweet-card></tweet-card>
+    <tweet-card *ngFor="let tweet of store.tweets" [tweet]="tweet" >
+
+    </tweet-card>
 </div>
