--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <landing-section></landing-section>
   <keyword-section></keyword-section>
   <metrics-section></metrics-section>
+  <charts-section></charts-section>
   <tweets-section></tweets-section>
 </div>
