--- a/src/app/components/tweet-card/tweet-card.component.html
+++ b/src/app/components/tweet-card/tweet-card.component.html
@@ -1,3 +1,5 @@
+<div class="border border-primary1 rounded-md w-full overflow-hidden">
+
 <div class="py-2 px-6 bg-primary1 w-full flex justify-between">
     <div class="flex items-center">
         <img class="rounded-full w-8" src="{{tweet.profile_image_url}}" />
@@ -24,4 +26,6 @@
     <p class="m-0 p-0 text-gray-800">
         <span class="font-bold">{{tweet.public_metrics.like_count}}</span> Likes
     </p>
+</div>
+
 </div>
