Improve bar char design

--- a/src/app/components/bar-chart/bar-chart.component.html
+++ b/src/app/components/bar-chart/bar-chart.component.html
@@ -1,8 +1,14 @@
-<canvas baseChart 
+<div class="h-96">
+    <canvas baseChart 
     [datasets]="get_data()"
     [labels]="barChartLabels"
     [options]="barChartOptions"
     [plugins]="barChartPlugins"
     [legend]="barChartLegend">
-</canvas>
+    </canvas>
+    <div class="w-full h-8 bg-white transform -translate-y-full"></div>
+</div>
+
+
+
   
