Hide artwork when screen is small

--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -2,7 +2,7 @@
     <!-- Main Content -->
     <div class="mt-12">
         <p class="text-primary1 font-bold mb-2 text-base">{{subTitleText}}</p>
-        <h1 class="text-primary2 font-black text-5xl mb-6">{{headerText}}</h1>
+        <h1 class="text-primary2 font-black text-4xl md:text-5xl mb-6">{{headerText}}</h1>
         <p class="max-w-prose text-baseTextColor mb-8">{{bodyText}}</p>
         <div class="flex gap-4">
             <button class="bg-primary1 text-white" mat-flat-button>Export Data</button>
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Artwork -->
-    <div class="relative">
+    <div class="relative hidden md:block">
         <div style="z-index: -1;"
             class="absolute top-1/2 opacity-10 left-1/2 transform scale-125 -translate-x-1/2 -translate-y-1/2 rounded-full w-96 h-96 bg-primary1">
         </div>
