--- a/src/app/components/metrics-section/metrics-section.component.html
+++ b/src/app/components/metrics-section/metrics-section.component.html
@@ -1,67 +1,56 @@
 <div class="mb-12">
 
     <div class="border px-4 border-primary1 rounded-md w-full">
-        <div class="mt-4 border-b border-primary1">
+        <!-- Total Tweets -->
+        <div class="my-4 border-b border-primary1">
             <p class="text-2xl">
-                <span class="font-thin" >Total Tweets: </span>
+                <span class="font-thin">Total Tweets: </span>
                 <span class="font-bold text-primary1">{{this.get_total_tweets()}}</span>
             </p>
         </div>
 
-        <div class="flex my-4">
-            <div class=" flex-1 mt-3 grid grid-cols-5 grid-rows-2">
-                <div class="row-span-2 col-span-2" >
-                    <div class="flex items-center gap-2">
-                        <img class="w-12 h-12" src="/assets/{{get_sentiment_data()[0][2]}}.svg" alt="">
-                        <p class="p-0 m-0 text-4xl font-bold text-primary1">
-                            {{get_sentiment_data()[0][1]}}%
-                        </p>
-                    </div>
-                    <p class="text-3xl mt-2 font-thin" >
-                        {{get_sentiment_data()[0][0]}}
+        <div class="flex-1 flex flex-col mb-4 border-b border-gray-100 pb-3">
+            <div class="flex py-2 items-center"
+            *ngFor="let val of get_sentiment_data(); let i = index">
+                <div class="flex-1 md:ml-6 overflow-hidden flex items-center gap-2">
+                    <img class="w-5 md:w-8" src="/assets/happy.svg" />
+                    <p style="max-width: 80%; text-overflow: ellipsis; "
+                        class="my-0 whitespace-nowrap overflow-hidden text-sm md:text-xl text-primary1 font-bold ">
+                        {{val[0]}}
                     </p>
                 </div>
 
-                <div class="col-span-3 row-span-1 mt-2" >
-                    <div class="flex items-center gap-2">
-                        <img class="w-8 h-8 mr-3" src="/assets/{{get_sentiment_data()[1][2]}}.svg" alt="">
-                        <p class="text-xl p-0 m-0 font-thin" >
-                            <span class="font-medium">{{get_sentiment_data()[1][1]}}%</span>
-                            {{get_sentiment_data()[1][0]}}
-                        </p>
-                    </div>
-                </div>
+                <p class="flex-1 my-0 text-sm md:text-lg">
+                    <span class="font-bold">{{val[2]}} </span>
+                    <span>Tweets</span>
+                </p>
 
-                <div class="col-span-3 row-span-1" >
-                    <div class="flex items-center gap-2">
-                        <img class="w-8 h-8 mr-3" src="/assets/{{get_sentiment_data()[2][2]}}.svg" alt="">
-                        <p class="text-xl p-0 m-0 font-thin" >
-                            <span class="font-medium">{{get_sentiment_data()[2][1]}}%</span>
-                            {{get_sentiment_data()[2][0]}}
-                        </p>
-                    </div>
-
-                </div>
+                <p class="flex-1 my-0 text-sm md:text-lg">
+                    <span class="font-bold">{{val[1]}}% </span>
+                    <span>Occurances</span>
+                </p>
             </div>
+        </div>
 
-            <div class="flex-1 flex flex-col border-l border-primary1">
-                <div class="flex border-b border-gray-100 py-2 mx-2" *ngFor="let val of get_hashtag_data()" 
-                >
-                    <div class="flex-1 ml-6 overflow-hidden">
-                        <p style="max-width: 80%; text-overflow: ellipsis; " class="my-0 whitespace-nowrap overflow-hidden text-primary1 font-bold ">
-                            #{{val[0]}}
-                        </p>
-                    </div>
-                   
-                    <p class="flex-1 my-0">
-                        <span class="font-bold">{{val[1]}} </span>
-                        <span>Tweets</span>
-                    </p>
-                    <p class="flex-1 my-0">
-                        <span class="font-bold">{{ getPercentage(val[1])}}% </span>
-                        <span>Occurances</span>
+        <div class="flex-1 flex flex-col mb-4">
+            <div class="flex py-2"
+            *ngFor="let val of get_hashtag_data(); let i = index">
+                <div class="flex-1 md:ml-6 overflow-hidden">
+                    <p style="max-width: 80%; text-overflow: ellipsis; "
+                        class="text-sm md:text-xl my-0 whitespace-nowrap overflow-hidden text-primary1 font-bold ">
+                        #{{val[0]}}
                     </p>
                 </div>
+
+                <p class="flex-1 my-0 text-sm md:text-lg">
+                    <span class="font-bold">{{val[1]}} </span>
+                    <span>Tweets</span>
+                </p>
+
+                <p class="flex-1 my-0 text-sm md:text-lg">
+                    <span class="font-bold">{{ getPercentage(val[1])}}% </span>
+                    <span>Occurances</span>
+                </p>
             </div>
         </div>
     </div>
