Fix landing section margin bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div class="max-w-5xl mx-auto px-12 pt-12 overflow-hidden">
-  <landing-section></landing-section>
+<div class="max-w-5xl mx-auto px-12 pt-12">
+  <div class="mb-10">
+    <landing-section></landing-section>
+  </div>
+
   <keyword-section></keyword-section>
+
   <div *ngIf="store.tweet_count != undefined">
     <metrics-section></metrics-section>
     <charts-section></charts-section>
@@ -10,6 +14,6 @@
   <div class="loader w-full flex justify-center mt-4 mb-4" [ngClass]="{
     'opacity-0': !store.isLoading
   }">
-      <mat-spinner diameter="50"></mat-spinner>
+    <mat-spinner diameter="50"></mat-spinner>
   </div>
 </div>
