--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -1,6 +1,6 @@
-<div class="flex justify-between">
+<div class="flex justify-between relative">
     <!-- Main Content -->
-    <div class="mt-12">
+    <div class="mt-12 z-10">
         <p class="text-primary1 font-bold mb-2 text-base">{{subTitleText}}</p>
         <h1 class="text-primary2 font-black text-4xl md:text-5xl mb-6">{{headerText}}</h1>
         <p class="max-w-prose text-baseTextColor mb-8">{{bodyText}}</p>
@@ -10,11 +10,10 @@
         </div>
     </div>
 
-    <!-- Artwork -->
-    <div class="relative hidden md:block">
+    <div class="absolute top-1/2 right-0 z-0 transform -translate-y-1/2 hidden md:block">
         <div style="z-index: -1;"
             class="absolute top-1/2 opacity-10 left-1/2 transform scale-125 -translate-x-1/2 -translate-y-1/2 rounded-full w-96 h-96 bg-primary1">
         </div>
-        <img src="/assets/artwork1.svg" alt="Tweets Artwork" />
-    </div>
+        <img class="opacity-90 transition-all lg:opacity-100" src="/assets/artwork1.svg" alt="Tweets Artwork" />
+    </div> 
 </div>
