--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between relative">
     <!-- Main Content -->
-    <div class="mt-12 z-10">
+    <div class="z-10">
         <p class="text-primary1 font-bold mb-2 text-base">{{subTitleText}}</p>
         <h1 class="text-primary2 font-black text-4xl md:text-5xl mb-6">{{headerText}}</h1>
         <p class="max-w-prose text-baseTextColor mb-8">{{bodyText}}</p>
