--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-5xl mx-auto px-12 pt-12">
+<div class="max-w-5xl mx-auto px-4 pt-6 md:px-12 xl:pt-24 md:pt-12">
   <div class="mb-10">
     <landing-section></landing-section>
   </div>
