Add opacity to whole artwork container

--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -10,10 +10,10 @@
         </div>
     </div>
 
-    <div class="absolute top-1/2 right-0 z-0 transform -translate-y-1/2 hidden md:block">
+    <div class="absolute opacity-40 transition-all lg:opacity-100 top-1/2 right-0 z-0 transform -translate-y-1/2 hidden md:block">
         <div style="z-index: -1;"
             class="absolute top-1/2 opacity-10 left-1/2 transform scale-125 -translate-x-1/2 -translate-y-1/2 rounded-full w-96 h-96 bg-primary1">
         </div>
-        <img class="opacity-90 transition-all lg:opacity-100" src="/assets/artwork1.svg" alt="Tweets Artwork" />
+        <img src="/assets/artwork1.svg" alt="Tweets Artwork" />
     </div> 
 </div>
