Remove wrap from word occurances

--- a/src/app/components/metrics-section/metrics-section.component.html
+++ b/src/app/components/metrics-section/metrics-section.component.html
@@ -25,8 +25,8 @@
                     <span>Tweets</span>
                 </p>
 
-                <p class="flex-1 my-0 text-sm md:text-lg">
-                    <span class="font-bold">{{val[1]}}% </span>
+                <p class="flex-1 my-0 text-sm md:text-lg whitespace-nowrap">
+                    <span class="font-bold">{{val[1]}}%</span>
                     <span>Occurances</span>
                 </p>
             </div>
@@ -47,7 +47,7 @@
                     <span>Tweets</span>
                 </p>
 
-                <p class="flex-1 my-0 text-sm md:text-lg">
+                <p class="flex-1 my-0 text-sm md:text-lg whitespace-nowrap">
                     <span class="font-bold">{{ getPercentage(val[1])}}% </span>
                     <span>Occurances</span>
                 </p>
