Create instructions dialog

--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -6,7 +6,7 @@
         <p class="max-w-prose text-baseTextColor mb-8">{{bodyText}}</p>
         <div class="flex gap-4">
             <button (click)="donwloadData()" class="bg-primary1 text-white" mat-flat-button>Export Data</button>
-            <button class="border-primary1" mat-stroked-button>Instructions</button>
+            <button (click)="openDialog()"class="border-primary1" mat-stroked-button>Instructions</button>
         </div>
     </div>
 
