Add add instructions

--- a/src/app/components/instructions-dialog/instructions-dialog.component.html
+++ b/src/app/components/instructions-dialog/instructions-dialog.component.html
@@ -1,6 +1,20 @@
-<div class="max-w-2xl py-4">
+<div class="max-w-4xl py-4">
     <p class="text-4xl font-bold mb-4 text-primary2">Instructions</p>
-    <p class="text-textColor mb-4">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste pariatur repudiandae earum assumenda quis, aspernatur voluptates consequatur magnam doloribus necessitatibus ullam laboriosam excepturi officia eligendi molestias repellendus saepe obcaecati facilis.
-    </p>
+    <ul class="list-disc ml-4">
+        <li class="text-baseTextColor text-lg">
+            To populate the dashboard, you must add keywords to the keyword input field.
+        </li>
+        <li class="text-baseTextColor text-lg">
+            Entering "#Helloworld" as a keyword will show tweets that contain the hashtag "#Helloworld"
+        </li>
+        <li class="text-baseTextColor text-lg">
+            Entering "@BarackObama" will include that mention the user "@BarackObama".
+        </li>
+        <li class="text-baseTextColor text-lg">
+            Entering "from:BarackObama" will include tweets made by the user "@BarackObama"
+        </li>
+        <li class="text-baseTextColor text-lg">
+            Entering "Hello World" will include tweets that contain the text "Hello World"        
+        </li>
+    </ul>
 </div>
