Update instructions text

--- a/src/app/components/instructions-dialog/instructions-dialog.component.html
+++ b/src/app/components/instructions-dialog/instructions-dialog.component.html
@@ -8,7 +8,7 @@
             Entering "#Helloworld" as a keyword will show tweets that contain the hashtag "#Helloworld"
         </li>
         <li class="text-baseTextColor text-lg">
-            Entering "@BarackObama" will include that mention the user "@BarackObama".
+            Entering "@BarackObama" will include tweets that mention the user "@BarackObama".
         </li>
         <li class="text-baseTextColor text-lg">
             Entering "from:BarackObama" will include tweets made by the user "@BarackObama"
